--- a/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-vm/src/main/resources/com.microsoft.azure.toolkit/message/vm.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-vm/src/main/resources/com.microsoft.azure.toolkit/message/vm.properties
@@ -1,3 +1,5 @@
+vm.publicIpAddress.description=Use a public IP address if you want to communicate with the virtual machine from outside the virtual network.
+vm.publicIpAddress.create.title=Create new public ip
 vm.create=create virtual machine({0})
 vm.list_availability_sets=list all available availability sets
 vm.list_public_ips=load all available public ip addresses
