--- a/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-vm/build.gradle
+++ b/PluginsAndFeatures/azure-toolkit-for-intellij/azure-intellij-plugin-vm/build.gradle
@@ -1,8 +1,18 @@
 intellij {
 }
 
+sourceSets {
+    main {
+        resources {
+            srcDir 'src/main/resources'
+        }
+    }
+}
+
 dependencies {
     compile project(':azure-intellij-plugin-lib')
+    compile project(':azure-intellij-plugin-storage')
+    compile 'com.microsoft.azure:azure-toolkit-compute-lib:0.12.0-SNAPSHOT'
     compile 'com.microsoft.azure:azure-toolkit-ide-common-lib:0.12.0-SNAPSHOT'
-    compile 'com.microsoft.azure:azure-toolkit-ide-springcloud-lib:0.12.0-SNAPSHOT'
+    compile 'com.microsoft.azure:azure-toolkit-ide-vm-lib:0.12.0-SNAPSHOT'
 }
