--- a/Utils/spark-tools/spark-v2.1/pom.xml
+++ b/Utils/spark-tools/spark-v2.1/pom.xml
@@ -138,6 +138,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
             <version>${spark.version}</version>
