--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -39,7 +39,6 @@
 
         <codehaus.plexus-utils.version>3.3.0</codehaus.plexus-utils.version>
         <dom4j.version>2.1.3</dom4j.version>
-        <httpclient.version>4.5.9</httpclient.version>
         <jacoco.version>0.8.5</jacoco.version>
         <jansi.version>1.17.1</jansi.version>
         <jtwig.core.version>5.87.0.RELEASE</jtwig.core.version>
@@ -299,11 +298,6 @@
                 <version>2.4.7</version>
             </dependency>
             <dependency>
-                <groupId>org.scala-lang</groupId>
-                <artifactId>scala-compiler</artifactId>
-                <version>2.13.6</version>
-            </dependency>
-            <dependency>
                 <groupId>com.jcraft</groupId>
                 <artifactId>jsch</artifactId>
                 <version>0.1.55</version>
@@ -319,9 +313,9 @@
                 <version>1.2.6</version>
             </dependency>
             <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>1.2.17</version>
+              <groupId>org.apache.logging.log4j</groupId>
+              <artifactId>log4j-core</artifactId>
+              <version>2.14.1</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
