--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.azureexplorer/plugin.xml
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.azureexplorer/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="com.microsoft.azure.toolkit.explorer" name="explorer" schema="schema/com.microsoft.azure.toolkit.explorer.exsd"/>
     <extension point="org.eclipse.ui.perspectiveExtensions">
         <perspectiveExtension targetID="*">
             <view
