--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/pom.xml
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/pom.xml
@@ -26,6 +26,8 @@
     <module>com.microsoft.azuretools.webapp.feature</module>
     <module>com.microsoft.azuretools.container</module>
     <module>com.microsoft.azuretools.container.feature</module>
+    <module>com.microsoft.azuretools.springcloud</module>
+    <module>com.microsoft.azuretools.springcloud.feature</module>
     <module>WindowsAzurePlugin4EJ</module>
   </modules>
   <properties>
