--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.springcloud/build.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.springcloud/build.properties
@@ -1,8 +1,8 @@
-source.. = src/
-output.. = bin/
+source.. = src/main/java
+output.. = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
-               icons/,\
                .,\
-               target/lib/azure-toolkit-ide-springcloud-lib-0.13.0-SNAPSHOT.jar
-src.includes = src/
+               target/lib/,\
+               icons/
+               
