--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.springcloud/pom.xml
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.springcloud/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <relativePath>../pom.xml</relativePath>
@@ -11,18 +9,16 @@
   </parent>
   <artifactId>com.microsoft.azuretools.springcloud</artifactId>
   <packaging>eclipse-plugin</packaging>
-  
   <dependencies>
     <dependency>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>azure-toolkit-ide-springcloud-lib</artifactId>
-        <version>0.13.0-SNAPSHOT</version>
+      <groupId>com.microsoft.azure</groupId>
+      <artifactId>azure-toolkit-ide-springcloud-lib</artifactId>
+      <version>0.13.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
-  
   <build>
     <plugins>
-    <plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
@@ -38,18 +34,12 @@
               <artifactItems>
                 <artifactItem>
                   <groupId>com.microsoft.azure</groupId>
-        	      <artifactId>azure-toolkit-ide-springcloud-lib</artifactId>
+                  <artifactId>azure-toolkit-ide-springcloud-lib</artifactId>
                 </artifactItem>
               </artifactItems>
             </configuration>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
       </plugin>
     </plugins>
   </build>
