--- a/Utils/azure-toolkit-ide-libs/pom.xml
+++ b/Utils/azure-toolkit-ide-libs/pom.xml
@@ -39,6 +39,7 @@
         <module>azure-toolkit-ide-springcloud-lib</module>
         <module>azure-toolkit-ide-storage-lib</module>
         <module>azure-toolkit-ide-vm-lib</module>
+        <module>azure-toolkit-ide-appservice-lib</module>
     </modules>
 
     <properties>
