--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.springcloud/build.properties
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.springcloud/build.properties
@@ -3,5 +3,4 @@ output.. = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               target/lib/,\
-               icons/
+               target/lib/
