--- a/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.core/plugin.xml
+++ b/PluginsAndFeatures/azure-toolkit-for-eclipse/com.microsoft.azuretools.core/plugin.xml
@@ -262,4 +262,31 @@
             class="com.microsoft.azuretools.core.utils.ProjectTypeTester">
         </propertyTester>
     </extension>
+    <extension point="org.eclipse.ui.console.consolePageParticipants">
+    <consolePageParticipant
+        class="com.microsoft.azure.toolkit.eclipse.common.console.AzureJobConsoleParticipant"
+        id="com.microsoft.azure.toolkit.eclipse.common.console.azureJobConsoleParticipant">
+      <enablement>
+        <test
+            property="org.eclipse.ui.console.consoleTypeTest"
+            value="com.microsoft.azure.toolkit.eclipse.job.consoleType">
+        </test>
+      </enablement>
+    </consolePageParticipant>
+    
+     <extension
+    point="org.eclipse.ui.console.consolePatternMatchListeners">
+    <consolePatternMatchListener
+        class="com.microsoft.azure.toolkit.eclipse.common.console.AzureHyperlinkTracker"
+        id="com.microsoft.azure.toolkit.eclipse.common.console.consoleAzureHyperlinkTracker"
+        regex="https?://(www\.)?[-a-zA-Z0-9@:%._+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_+.~#?&amp;//=]*)">
+      <enablement>
+        <test
+            property="org.eclipse.ui.console.consoleTypeTest"
+            value="com.microsoft.azure.toolkit.eclipse.job.consoleType">
+        </test>
+      </enablement>
+    </consolePatternMatchListener>
+  </extension>
+  </extension>
 </plugin>
